Added KaunasPHP event v.39 to archive and added event KaunasPHP v.40

--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
         </div>
     </div>
     <div class="jumbotron">
-        <h1>KaunasPHP v.39</h1>
-        <h3>2017-01-18 18:30, @ <a href="https://goo.gl/maps/N8DLHb5Qxst">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a>
+        <h1>KaunasPHP v.40</h1>
+        <h3>2017-02-18 18:30, @ <a href="https://goo.gl/maps/N8DLHb5Qxst">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a>
         </h3>
         <h3>Pranešimai:</h3>
         <div style="text-align: left; font-size: 16px;">
             <ul>
-                <li>"Application Autoscaling on AWS: HomeToGo case"
+                <li>"Codeception. Theory & Experience"
                     <ul>
-                        <li>Audrius Bugas, Chief Architect @ HomeToGo</li>
+                        <li>Jevgenij Liachovič, Software Engineer @ NFQ | Lendico</li>
                     </ul>
                 </li>
             </ul>
         </div>
-        <p><br/><a href="https://www.facebook.com/events/1963330893894560/" class="btn btn-success"><i
+        <p><br/><a href="https://www.facebook.com/events/1398621450179870/" class="btn btn-success"><i
                 class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
     </div>
 
@@ -50,6 +50,31 @@
             <div class="panel panel-primary">
                 <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> Buvę susitikimai</div>
                 <div class="panel-group" id="accordion2">
+
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapse39">
+                                    KaunasPHP v.39 (2017-01-18 18:30)
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapse39" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <ul>
+                                    <li>"Application Autoscaling on AWS: HomeToGo case”
+                                        <ul>
+                                            <li><a href="">Audrius Bugas, Chief Architect @ HomeToGo</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <a href="https://www.facebook.com/events/1963330893894560/" target="_blank"><img
+                                        src="media/img/facebook.png"/></a>
+                                <a nohref target="_blank"><img src="media/img/github-icon.jpg"/></a>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="panel">
                         <div class="panel-heading">
