--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div id="app" class="container-narrow">
+    <div id="app" v-cloak class="container-narrow">
         <div class="header">
             <div class="row">
                 <div class="col col-lg-4 text-left"><img src="media/img/kaunasphp.png" alt="KaunasPHP" /></div>
@@ -146,7 +146,7 @@
     ga('create', 'UA-43315710-1', 'kaunasphp.lt');
     ga('send', 'pageview');
     </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue"></script>
