--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>KaunasPHP.lt - Kauno PHP bendruomenė</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Kaunas PHP bendruomenė">
-    <meta name="google-site-verification" content="" />
-    <link rel="stylesheet" href="styles/bootstrap.min.css" />
-    <link rel="stylesheet" href="styles/bootstrap-theme.min.css" />
-    <link rel="stylesheet" href="styles/main.css" />
-    <meta property="og:title" content="KaunasPHP.lt - Kauno PHP bendruomenė" />
-    <meta property="og:image" content="http://www.kaunasphp.lt/img/kaunasphp.png" />
-    <meta property="og:url" content="http://www.kaunasphp.lt" />
+    <meta name="google-site-verification" content=""/>
+    <link rel="stylesheet" href="styles/bootstrap.min.css"/>
+    <link rel="stylesheet" href="styles/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="styles/main.css"/>
+    <meta property="og:title" content="KaunasPHP.lt - Kauno PHP bendruomenė"/>
+    <meta property="og:image" content="http://www.kaunasphp.lt/media/img/kaunasphp.png"/>
+    <meta property="og:url" content="http://www.kaunasphp.lt"/>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <style type="text/css">
         [v-cloak] {
             display: none;
@@ -21,122 +22,130 @@
 </head>
 
 <body>
-    <div id="app" v-cloak class="container-narrow">
-        <div class="header">
-            <div class="row">
-                <div class="col col-lg-4 text-left"><img src="media/img/kaunasphp.png" alt="KaunasPHP" /></div>
-            </div>
+<div id="app" v-cloak class="container-narrow">
+    <div class="header">
+        <div class="row">
+            <div class="col col-lg-4 text-left"><img src="media/img/kaunasphp.png" alt="KaunasPHP.lt"/></div>
         </div>
-        <div v-for="event in activeEvents" class="jumbotron" v-cloak>
-            <h1>{{ event.name }}</h1>
-            <h3>{{ event.start_time }}, @ <a v-bind:href="event.mapUrl">{{ event.place }}</a>
+    </div>
+    <div v-for="event in activeEvents" class="jumbotron" v-cloak>
+        <h1>{{ event.name }}</h1>
+        <h3>{{ event.start_time }}, @ <a v-bind:href="event.mapUrl">{{ event.place }}</a>
         </h3>
-            <div style="text-align: left; font-size: 14px;" v-html="event.description">
-            </div>
-            <p>
-                <br/><a v-bind:href="event.facebookLink" class="btn btn-success"><i
-                class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
+        <div class="event-description" v-html="event.description">
         </div>
-        <div class="row marketing" v-cloak>
-            <div class="col col-lg-8">
-                <div class="panel panel-primary">
-                    <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> Buvę susitikimai</div>
-                    <div class="panel-group" id="accordion2">
-                        <div v-for="event in historicEvents" class="panel">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
+        <p>
+            <br/><a v-bind:href="event.facebookLink" class="btn btn-success"><i
+                class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
+    </div>
+    <div class="row marketing" v-cloak>
+        <div class="col col-lg-8">
+            <div class="panel panel-primary">
+                <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> Buvę susitikimai</div>
+                <div class="panel-group" id="accordion2">
+                    <div v-for="event in historicEvents" class="panel">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
                                    v-bind:href="event.collapseRefId">
                                     {{ event.name }}
                                 </a>
                             </h4>
-                            </div>
-                            <div v-bind:id="event.collapseRef" class="panel-collapse collapse ">
-                                <div class="panel-body">
-                                    <p v-html="event.shortDescription">
+                        </div>
+                        <div v-bind:id="event.collapseRef" class="panel-collapse collapse ">
+                            <div class="panel-body">
+                                <p v-html="event.shortDescription">
 
-                                    </p>
-                                    <a v-bind:href="event.facebookLink" target="_blank"><img src="media/img/facebook.png" /></a>
-                                    <a v-bind:href="event.gitHubLink" target="_blank"><img src="media/img/github-icon.jpg" /></a>
-                                </div>
+                                </p>
+                                <a v-bind:href="event.facebookLink" target="_blank"><img src="media/img/facebook.png"/></a>
+                                <a v-bind:href="event.gitHubLink" target="_blank"><img src="media/img/github-icon.jpg"/></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <p>
+            </div>
+            <p>
                 <a id="moreResultsButton" v-on:click="loadEvents" class="btn btn-info"><i
-                class="glyphicon glyphicon-time"></i> Senesni susitikimai...</a></p>
-            </div>
-            <div class="col col-lg-4">
-                <div class="panel panel-primary">
-                    <div class="panel-heading"><i class="glyphicon glyphicon-exclamation-sign"></i> Susitikimų kalendorius
-                    </div>
-                    <div class="panel-body">
-                        <div class="text-center">
-                            <a href="http://usergroups.lt/" target="_blank"><img width="60" src="media/img/calendar.png" /></a>
-                        </div>
-                    </div>
+                        class="glyphicon glyphicon-time"></i> Senesni susitikimai...</a></p>
+        </div>
+        <div class="col col-lg-4">
+            <div class="panel panel-primary">
+                <div class="panel-heading"><i class="glyphicon glyphicon-exclamation-sign"></i> Pasiūlyk temą!
                 </div>
-            </div>
-            <div class="col col-lg-4">
-                <div class="panel panel-primary">
-                    <div class="panel-heading"><i class="glyphicon glyphicon-heart-empty"></i> Socializacija</div>
-                    <div class="panel-body">
-                        <a href="https://twitter.com/kaunasphp" target="_blank"><img src="media/img/twitter.png" /></a>
-                        <a href="https://www.facebook.com/groups/kaunasdev/" target="_blank"><img src="media/img/facebook.png" /></a>
-                        <a href="https://github.com/kaunasphp/kaunasphp-meetups/" target="_blank"><img src="media/img/github-icon.jpg" /></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col col-lg-4">
-                <div class="panel panel-primary">
-                    <div class="panel-heading"><i class="glyphicon glyphicon-user"></i> Draugai</div>
-                    <div class="panel-body">
-                        <ul class="list-unstyled">
-                            <li><a href="http://www.vilniusphp.lt" target="_blank">VilniusPHP</a></li>
-                            <li><a href="http://www.vilniusjs.lt" target="_blank">VilniusJS</a></li>
-                        </ul>
+                <div class="panel-body">
+                    <div class="text-center">
+                        <a href="https://goo.gl/forms/Nv3a9i4aJTg3bDIi1" target="_blank" title="Pasiūlyk temą!"><img
+                                width="60" src="media/img/calendar.png" class="blink"/></a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="panel panel-primary">
-            <div class="panel-heading"><i class="glyphicon glyphicon-euro"></i> Rėmėjai</div>
-            <div class="panel-body">
-                <ul class="list-inline">
-                    <li>
-                        <a href="http://www.datadog.lt" target="_blank"><img src="media/img/datadog.png" width="160" /></a>
-                    </li>
-                    <li>
-                        <a href="http://www.nfq.lt" target="_blank"><img src="media/img/nfq.png" /></a>
-                    </li>
-                    <li>
-                        <a href="https://www.intermedix.com/?utm_source=kaunasphp.lt" target="_blank"><img src="media/img/IMX-logo-Web.png" /></a>
-                    </li>
-                    <li>
-                        <a href="http://lt.insidewarehouse.com/" target="_blank"><img src="media/img/insidewarehouse.png" width="160" /></a>
-                    </li>
-                </ul>
-                <ul class="list-inline">
-                    <li>
-                        <a href="http://www.inviqa.com" target="_blank"><img src="media/img/inviqa-logo.png" height="74" /></a>
-                    </li>
-                    <li class="pull-right">
-                        <a href="http://www.jetbrains.com/phpstorm/features/" alt="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support" title="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support"><img src="media/img/logo_PhpStorm.png"></a>
-                    </li>
-                </ul>
+
+        <div class="col col-lg-4">
+            <div class="panel panel-primary">
+                <div class="panel-heading"><i class="glyphicon glyphicon-heart-empty"></i> Socializacija</div>
+                <div class="panel-body">
+                    <a href="https://twitter.com/kaunasphp" target="_blank"><img src="media/img/twitter.png"/></a>
+                    <a href="https://www.facebook.com/groups/kaunasdev/" target="_blank"><img
+                            src="media/img/facebook.png"/></a>
+                    <a href="https://github.com/kaunasphp/kaunasphp-meetups/" target="_blank"><img
+                            src="media/img/github-icon.jpg"/></a>
+                </div>
             </div>
         </div>
-        <div class="footer">
-            <p>KaunasPHP 2013 - <span class="currentYear"></span></p>
+        <div class="col col-lg-4">
+            <div class="panel panel-primary">
+                <div class="panel-heading"><i class="glyphicon glyphicon-user"></i> Draugai</div>
+                <div class="panel-body">
+                    <ul class="list-unstyled">
+                        <li><a href="http://kaunasjs.lt/" target="_blank">KaunasJS</a></li>
+                        <li><a href="http://usergroups.lt/" target="_blank">Usergroups.lt</a></li>
+                        <li><a href="http://www.vilniusphp.lt" target="_blank">VilniusPHP</a></li>
+                        <li><a href="http://www.vilniusjs.lt" target="_blank">VilniusJS</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
-    <script>
-    (function(i, s, o, g, r, a, m) {
+    <div class="panel panel-primary">
+        <div class="panel-heading"><i class="glyphicon glyphicon-euro"></i> Rėmėjai</div>
+        <div class="panel-body">
+            <ul class="list-inline">
+                <li>
+                    <a href="http://www.datadog.lt" target="_blank"><img src="media/img/datadog.png" width="160"/></a>
+                </li>
+                <li>
+                    <a href="http://www.nfq.lt" target="_blank"><img src="media/img/nfq.png"/></a>
+                </li>
+                <li>
+                    <a href="https://www.intermedix.com/?utm_source=kaunasphp.lt" target="_blank"><img
+                            src="media/img/IMX-logo-Web.png"/></a>
+                </li>
+            </ul>
+            <ul class="list-inline">
+                <li class="pull-left">
+                    <a href="http://www.helis.lt" target="_blank"><img
+                            src="media/img/seohelis-logo_small_black.png"/></a>
+                </li>
+                <li class="pull-right">
+                    <a href="http://www.jetbrains.com/phpstorm/features/"
+                       alt="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support"
+                       title="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support"><img
+                            src="media/img/logo_PhpStorm.png"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer">
+        <p>KaunasPHP 2013 - <span class="currentYear"></span></p>
+    </div>
+</div>
+<script>
+    (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
+        i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
         a = s.createElement(o),
             m = s.getElementsByTagName(o)[0];
         a.async = 1;
@@ -145,19 +154,19 @@
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-43315710-1', 'kaunasphp.lt');
     ga('send', 'pageview');
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://unpkg.com/vue"></script>
-    <script type="text/javascript" src="scripts/app.js"></script>
+</script>
 
-    <script type="text/javascript">
-    $(document).ready(function() {
+<script src="scripts/jquery.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
+<script src="scripts/axios.min.js"></script>
+<script src="scripts/vue.min.js"></script>
+
+<script type="text/javascript" src="scripts/app.js"></script>
+
+<script type="text/javascript">
+    $(document).ready(function () {
         $('.currentYear').text((new Date).getFullYear());
     });
-    </script>
-    
+</script>
 </body>
-
 </html>
