Helis company logo update

--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
             </ul>
             <ul class="list-inline">
                 <li class="pull-left">
-                    <a href="http://www.helis.lt" target="_blank"><img
-                            src="media/img/seohelis-logo_small_black.png"/></a>
+                    <a href="http://www.helis.lt" target="_blank">
+                        <img src="media/img/Helis_logo.png" width="160"/>
+                    </a>
                 </li>
                 <li class="pull-right">
                     <a href="http://www.jetbrains.com/phpstorm/features/"
