issue-29 https on

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="styles/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="styles/main.css"/>
     <meta property="og:title" content="KaunasPHP.lt - Kauno PHP bendruomenė"/>
-    <meta property="og:image" content="http://www.kaunasphp.lt/media/img/kaunasphp.png"/>
-    <meta property="og:url" content="http://www.kaunasphp.lt"/>
+    <meta property="og:image" content="https://www.kaunasphp.lt/media/img/kaunasphp.png"/>
+    <meta property="og:url" content="https://www.kaunasphp.lt"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <style type="text/css">
         [v-cloak] {
@@ -103,7 +103,7 @@
                     <ul class="list-unstyled">
                         <li><a href="http://kaunasjs.lt/" target="_blank">KaunasJS</a></li>
                         <li><a href="http://usergroups.lt/" target="_blank">Usergroups.lt</a></li>
-                        <li><a href="http://www.vilniusphp.lt" target="_blank">VilniusPHP</a></li>
+                        <li><a href="https://www.vilniusphp.lt" target="_blank">VilniusPHP</a></li>
                         <li><a href="http://www.vilniusjs.lt" target="_blank">VilniusJS</a></li>
                     </ul>
                 </div>
